Fixed a bug so the user can't overflow the display window with numbers

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html, body {
     background-color: #cac6c6;
     margin: 3px;
     border-radius: 5px;
-    font-size: 3rem;
+    font-size: 4rem;
     text-align: right;
 }
 .container .wide {
